# FusionCHMIngest

./: .gitignore  Brewfile  HOMEBREW_PLAN.md  README.md  pyproject.toml  requirements-ci.txt  requirements-test.txt  setup_dirs.py  spec.md
.github/workflows/: test.yml
Formula/: fusionchmingest.rb
fusionchmingest/: __init__.py  __main__.py  chm_to_markdown.py  chunk_markdown.py  cli.py  embed_documents.py  mcp_server.py  vector_store.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_chunk_markdown.py
